src/test/deca/context/valid/ClassMathode7.deca
// Description:
//    symple class avec methode void
// Resultats:
//    OK
// 
// Historique:
//    cree le 01/01/2022
class A {
	void A() {
        int a=5;
        boolean b=true;
	}
}