src/test/deca/context/invalid/classmethode16.deca
class A {
	void methode(int k,boolean n) {
        int a=k;   
	}
    void methode(boolean n) {
        int a=k;   
	}
}

